feat: integrate Radix UI components and refactor widget management
- Added @radix-ui/react-hover-card and @radix-ui/react-popover dependencies.
- Refactored App component to manage projects and widgets using Zustand.
- Removed unused Text, DataTable, and Image components; restructured their implementations.
- Created new renderers for Text, DataTable, and Image components in a dedicated directory.
- Implemented a Widget route to handle widget addition and layout management.
- Introduced LocalStorage utility for persistent state management.
- Enhanced Zustand store for widget projects with create, add, and reset functionalities.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-hover-card": "^1.1.14",
+    "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.11",
     "class-variance-authority": "^0.7.1",
@@ -19,7 +21,8 @@
     "react-dom": "^18.2.0",
     "react-grid-layout": "^1.5.2",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@types/node": "^24.0.7",
